test/fail/fail_4.prsl
// RUN: (%edir/prsl --codegen %s 2>&1) | filecheck %s
// RUN: (%edir/prsl %s 2>&1) | filecheck %s
// CHECK: [Line 13] Error: facts: Attempt to access an undef variable

fact = 1;
n = 2;
while (n > 0)
{
    fact = fact * n;
    n--;
}

print facts;